# zandir

./: .gitignore  README.MD
back_end/: .env.example  README.md  db.sqlite3  pyproject.toml
back_end/movies_api/: models.py  setup.py  urls.py  views.py
back_end/movies_api/api/: serializers.py
back_end/movies_api/management/commands/: create_movie.py
back_end/movies_api/migrations/: 0001_initial.py  0002_movies_plot.py
back_end/restapi/: settings.py  urls.py
front_end/: README.md  package-lock.json  package.json  vite.config.ts
front_end/src/: App.tsx
front_end/src/components/Header/: Header.test.tsx  Header.tsx
front_end/src/components/ListMovies/: ListMovies.test.tsx  ListMovies.tsx
front_end/src/components/Spinner/: Spinner.tsx
front_end/src/services/: ApiMovies.ts
front_end/src/types/: Movie.ts  MovieResponse.ts
