[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Giovanny Cordeiro <giovannycordeiropb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
django-stubs = "^5.1.1"
djangorestframework-stubs = "^3.15.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = 'python manage.py runserver'
migrations = "python manage.py makemigrations"
migrate = 'python manage.py migrate'
seed = 'python manage.py create_movie'